syntax = "proto3";

package FridayClean;

service FridayCleanCommunication {
	rpc AuthSendCode (AuthSendCodeRequest) returns (AuthSendCodeResponse) {}
	rpc AuthValidateCode (AuthValidateCodeRequest) returns (AuthValidateCodeResponse) {}
	rpc AuthValidateToken (AuthValidateTokenRequest) returns (AuthValidateTokenResponse) {}
	rpc GetProfileInfo (GetProfileInfoRequest) returns (GetProfileInfoResponse) {}
	rpc SetProfileInfo (SetProfileInfoRequest) returns (SetProfileInfoResponse) {}
	rpc UserLogout (UserLogoutRequest) returns (UserLogoutResponse) {}
	rpc GetCleaningServices (GetCleaningServicesRequest) returns (GetCleaningServicesResponse) {}
	rpc GetOrderedCleanings (GetOrderedCleaningsRequest) returns (GetOrderedCleaningsResponse) {}
	rpc OrderNewCleaning (OrderNewCleaningRequest) returns (OrderNewCleaningResponse) {}
	rpc GetCleaners (GetCleanersRequest) returns (GetCleanersResponse) {}
	rpc ChangeOrderedCleaningState (ChangeOrderedCleaningStateRequest) returns (ChangeOrderedCleaningStateResponse) {}
}

message AuthSendCodeRequest {
	string Phone = 1;
}

enum AuthSendCodeStatus {
	Success = 0;
	InvalidPhone = 1;
	GateWayError = 2;
}

message AuthSendCodeResponse {
	AuthSendCodeStatus ResponseStatus = 1;
	string ErrorMessage = 2;
}


message AuthValidateCodeRequest {
	string Phone = 1;
	int32 Code = 2;
}

enum AuthValidateCodeStatus {
	ValidCode = 0;
	InvalidCode = 1;
}

message AuthValidateCodeResponse {
	AuthValidateCodeStatus ResponseStatus = 1;
	string AccessToken = 2;
}



message AuthValidateTokenRequest {
	string AccessToken = 2;
}

enum AuthValidateTokenStatus {
	ValidToken = 0;
	InvalidToken = 1;
}

message AuthValidateTokenResponse {
	AuthValidateTokenStatus ResponseStatus = 1;
}

message GetProfileInfoRequest {

}

message GetProfileInfoResponse {
	string Name = 1;
	string Address = 2;
	string AvatarLink = 3;
	string Phone = 4;
	string UserRole = 5;
	int32 Money = 6;
}


message SetProfileInfoRequest {
	string Name = 1;
	string Address = 2;
	string AvatarLink = 3;
}

enum SetProfileInfoStatus
{
	SetSuccessfully = 0;
	SetFailed = 1;
}

message SetProfileInfoResponse {
	SetProfileInfoStatus ResponseStatus = 1;
}



message UserLogoutRequest {

}

enum UserLogoutStatus
{
	LogoutSuccess = 0;
	LogoutError = 1;
}

message UserLogoutResponse {
	UserLogoutStatus ResponseStatus = 1;
}

message GetCleaningServicesRequest {

}

enum CleaningType
{
	MaintenanceCleaning = 0;
	ComplexCleaning = 1;
	GeneralCleaning = 2;
}

message CleaningService
{
	CleaningType CleaningType = 1;
	int32 ApartmentAreaMin = 2;
	int32 ApartmentAreaMax = 3;
	int32 StartingPrice = 4;
	string Name = 5;
	string Description = 6;
}

message GetCleaningServicesResponse {
	repeated CleaningService CleaningServices = 1;
}




message GetOrderedCleaningsRequest {

}

enum OrderedCleaningState {
	WaitingForCleanerConfirmation = 0;
	WaitingForCleanerArrival = 1;
	CleanerWorkInProgress = 2;
	Canceled = 3;
	Completed = 4;
}

message OrderedCleaning {
	int32 Id = 1;
	string CustomerPhone = 2;
	string CustomerName = 3;
	string CleanerPhone = 4;
	string CleanerName = 5;
	CleaningType CleaningType = 6;
	string Address = 7;
	int32 ApartmentArea = 8;
	int32 Price = 9;
	OrderedCleaningState State = 10;	
}

message GetOrderedCleaningsResponse {
	repeated OrderedCleaning OrderedCleanings = 1;
}


message OrderNewCleaningRequest
{
	string CleanerPhone = 3;
	CleaningType CleaningType = 4;
	int32 ApartmentArea = 5;
}

message OrderNewCleaningResponse
{
	OrderedCleaningState OrderedCleaningState = 1;
	string Info = 2;
}


message GetCleanersRequest
{

}

message Cleaner
{
	string Phone = 1;
	string Name = 2;
	string AvatarLink = 3;
}

message GetCleanersResponse
{
	repeated Cleaner Cleaners = 1;
}


message ChangeOrderedCleaningStateRequest
{
	int32 OrderId = 1;
	OrderedCleaningState RequiredState = 2;
	
}

enum ChangeOrderedCleaningStateStatus
{
	OrderStatusChangedSuccessfully = 0;
	OrderStatusChangeError = 1;
}

message ChangeOrderedCleaningStateResponse
{
	ChangeOrderedCleaningStateStatus ResponseStatus = 1;
	string ErrorMessage = 2;
}